Fixed close icon alignment

--- a/styles/base.less
+++ b/styles/base.less
@@ -138,7 +138,7 @@ atom-pane {
             height: 50px;
             line-height: 50px;
             &.modified:not(:hover) .close-icon {
-                // top: 23px;
+                top: 23px;
             }
             &:first-child {
                 margin-left: 8px;
